Tweak spacing on first job heading

--- a/resume.tex
+++ b/resume.tex
@@ -112,9 +112,10 @@
     
     \section{Work history}
     \job{Mar. 2018---Present}
-        {Südzucker AG\\Neuoffstein}
+        {Südzucker AG, Neuoffstein}
         {Senior Manager,\\Confectionery Technology}
-        {\begin{itemize}
+        {\vspace{0.5em}
+          \begin{itemize}
             \item Leading confectionery application development team
             \item Delivering customer-focused and strategic
               development projects
