Tweak for Givaudan

--- a/resume.tex
+++ b/resume.tex
@@ -66,17 +66,19 @@
     \section{Skills}
     
     \skillsection{Management skills}
-    \skill{Training and\\knowledge transfer}{4}
-    \skill{Team leadership}{4}
+    \skill{Innovation}{5}
     \skill{Project management}{5}
+    \skill{Knowledge transfer}{4}
+    \skill{Team leadership}{4}
     \skill{Intl. project management}{4}
-    \skill{Portfolio management}{4}
     \vspace{0.5em}
     
     \skillsection{Product Development skills}
-    \skill{Innovation}{5}
     \skill{Confectionery}{5}
+    \skill{Bakery}{4}
     \skill{Supplements}{4}
+    \skill{Flavour technology}{3}
+    \skill{Savoury}{3}
     \skill{Pharmaceutical}{3}
     \vspace{0.5em}
     
