Add more languages for Givaudan

--- a/resume.tex
+++ b/resume.tex
@@ -94,6 +94,9 @@
     \skill{Afrikaans}{5}
     \skill{German}{4}
     \skill{Dutch}{3}
+    \skill{French}{2}
+    \skill{Italian}{1}
+    \skill{Russian}{1}
     \bigskip
     
 }
